# COSC3500ParticleSim

./: .gitignore  README.md
CUDA/: CMakeLists.txt  build.sh  buildrun.sh  cuda.sh  main.cpp  particle.hpp  particles.cu  particles.hpp
CUDA/docs/: Concepting.md
OpenMP/: CMakeLists.txt  build.sh  main.cpp  openmp.sh  particle.cpp  particle.hpp  particles.cpp  particles.hpp
OpenMP/libs/cereal/: cereal.hpp
Serial/: CMakeLists.txt  README.md  build.sh  main.cpp  particle.hpp  particle_sim.sh  particles.cpp  particles.hpp  run.sh
